examples/test/testpolicy9817.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9817
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key23: value7
      key4: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value47
          key23: value37
      podSelector:
        matchLabels:
          key7: value44
